--- a/build.xml
+++ b/build.xml
@@ -76,7 +76,7 @@
 	</target>
 
 	<target name="compile" depends="init" description="compile the source ">
-		<javac debug="true" debuglevel="lines, vars, and source" compiler="modern" optimize="true" target="1.5" srcdir="${src}" destdir="${build}" classpathref="project.class.path" includeantruntime="false" />
+		<javac debug="on" debuglevel="lines,vars,source" compiler="modern" optimize="true" target="1.5" srcdir="${src}" destdir="${build}" classpathref="project.class.path" includeantruntime="false" />
 	</target>
 
 	<target name="dist-jar" depends="compile">
