--- a/pom.xml
+++ b/pom.xml
@@ -233,18 +233,13 @@
 			<version>3.10-beta1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-feedparser</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.odftoolkit</groupId>
 			<artifactId>simple-odf</artifactId>
 			<version>0.7-incubating</version>
 			<classifier>jar-with-dependencies</classifier>
 			<exclusions>
 				<exclusion>
-					<groupId>sun.com</groupId>
+					<groupId>com.sun</groupId>
 					<artifactId>tools</artifactId>
 				</exclusion>
 			</exclusions>
@@ -358,6 +353,12 @@
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>2.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-feedparser</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 	<properties>
