Manager POM exclusions

--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,12 @@
 			<artifactId>simple-odf</artifactId>
 			<version>0.7-incubating</version>
 			<classifier>jar-with-dependencies</classifier>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun</groupId>
+					<artifactId>tools</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>batik</groupId>
