Exclude .git directory from GNU tarball

--- a/build.xml
+++ b/build.xml
@@ -149,7 +149,7 @@
 	<!-- The tarball -->
 	<target name="dist-src">
 		<mkdir dir="${dist}" />
-		<tar compression="gzip" destfile="${dist}/${product}.src.tar.gz" longfile="gnu" basedir="." excludes="temp/**, dist/**, ant-build/**, build/**, target/**" />
+		<tar compression="gzip" destfile="${dist}/${product}.src.tar.gz" longfile="gnu" basedir="." excludes="temp/**, dist/**, ant-build/**, build/**, target/**, .git/**" />
 	</target>
 
 	<target name="clean" description="clean up">
