--- a/pom.xml
+++ b/pom.xml
@@ -343,6 +343,11 @@
 			<artifactId>mallet</artifactId>
 			<version>2.0.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.2.5</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
