--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jaeksoft</groupId>
 	<artifactId>opensearchserver</artifactId>
@@ -390,7 +388,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.5-SNAPSHOT</version>
+	<version>1.5</version>
 	<scm>
 		<connection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</connection>
 		<developerConnection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</developerConnection>
