--- a/pom.xml
+++ b/pom.xml
@@ -388,7 +388,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.5</version>
+	<version>1.5-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</connection>
 		<developerConnection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</developerConnection>
