--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,16 @@
 			<artifactId>selenium-java</artifactId>
 			<version>2.34.0</version>
 		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-platform</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -394,7 +404,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.5-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</connection>
 		<developerConnection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</developerConnection>
