--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,18 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<version>1.5-dev4</version>
+	<scm>
+		<connection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</connection>
+		<developerConnection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</developerConnection>
+		<url>git@github.com:jaeksoft/gopensearchserver.git</url>
+	</scm>
+	<issueManagement>
+		<url>https://github.com/jaeksoft/opensearchserver/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<url>http://www.open-search-server.com/jenkins</url>
+	</ciManagement>
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
@@ -381,9 +393,37 @@
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<doCheck>false</doCheck>
+					<doUpdate>false</doUpdate>
+					<shortRevisionLength>8</shortRevisionLength>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+						<manifestEntries>
+							<Implementation-Build>${buildNumber}</Implementation-Build>
+						</manifestEntries>
+					</archive>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -427,6 +467,7 @@
 							<goal>jdeb</goal>
 						</goals>
 						<configuration>
+							<deb>${project.build.directory}/${project.build.finalName}.deb</deb>
 							<dataSet>
 								<data>
 									<src>${project.build.directory}/${project.build.finalName}-war-exec.jar</src>
@@ -482,16 +523,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.5-SNAPSHOT</version>
-	<scm>
-		<connection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</connection>
-		<developerConnection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</developerConnection>
-		<url>git@github.com:jaeksoft/gopensearchserver.git</url>
-	</scm>
-	<issueManagement>
-		<url>https://github.com/jaeksoft/opensearchserver/issues</url>
-	</issueManagement>
-	<ciManagement>
-		<url>http://www.open-search-server.com/jenkins</url>
-	</ciManagement>
 </project>
