--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>2.34.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.5</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
