--- a/pom.xml
+++ b/pom.xml
@@ -279,10 +279,10 @@
 			<version>4.4.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jaudiotagger</groupId>
-			<artifactId>jaudiotagger</artifactId>
-			<version>2.0.3</version>
-		</dependency>
+    		<groupId>org</groupId>
+    		<artifactId>jaudiotagger</artifactId>
+   			<version>2.0.3</version>
+			</dependency>
 		<dependency>
 			<groupId>com.jaeksoft</groupId>
 			<artifactId>pojodbc</artifactId>
@@ -331,11 +331,6 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-feedparser</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
 			<version>4.2.5</version>
@@ -381,6 +376,16 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>dk.dren</groupId>
+			<artifactId>hunspell-dren</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.rome</groupId>
+			<artifactId>rome</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	<properties>
