--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	<version>1.5-dev4</version>
+	<version>1.5-beta1</version>
 	<scm>
 		<connection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</connection>
 		<developerConnection>scm:git:git@github.com:jaeksoft/gopensearchserver.git</developerConnection>
