--- a/pom.xml
+++ b/pom.xml
@@ -413,6 +413,11 @@
 			<artifactId>langdetect</artifactId>
 			<version>1.1-20120112</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-xml-provider</artifactId>
+			<version>2.2.3</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
