Spellcheck includes a suggestion

--- a/pom.xml
+++ b/pom.xml
@@ -456,6 +456,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
 				<configuration>
+					<archiveClasses>true</archiveClasses>
 					<archive>
 						<manifest>
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
