HTML Parser can ignore tags located by a xpath query Conflicts: 	src/main/java/com/jaeksoft/searchlib/index/IndexAbstract.java 	src/main/java/com/jaeksoft/searchlib/index/IndexSingle.java

--- a/pom.xml
+++ b/pom.xml
@@ -481,6 +481,8 @@
 				<version>2.1</version>
 				<configuration>
 					<path>/</path>
+					<uriEncoding>UTF-8</uriEncoding>
+					<additionalClasspathDirs>lib</additionalClasspathDirs>
 				</configuration>
 				<executions>
 					<execution>
